--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "chalk": "^2.3.1",
         "express": "^4.16.2",
+        "extract-text-webpack-plugin": "^3.0.2",
         "http-proxy-middleware": "^0.17.4",
         "opn": "^5.2.0",
         "semver": "^5.5.0",
