--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webpack-html-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "A webpack template to create static html websites easily",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "dev": ""
   },
   "repository": {
     "type": "git",
