--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Sangeethks/webpack-html-static-template#readme",
   "devDependencies": {
     "express": "^4.16.2",
-    "opn": "^5.2.0"
+    "http-proxy-middleware": "^0.17.4",
+    "opn": "^5.2.0",
+    "webpack": "^4.0.1"
   }
 }
