--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/Sangeethks/webpack-html-static-template#readme",
   "devDependencies": {
     "express": "^4.16.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^3.0.4",
     "http-proxy-middleware": "^0.17.4",
     "opn": "^5.2.0",
-    "webpack": "^4.0.1"
+    "webpack": "^4.0.1",
+    "webpack-merge": "^4.1.2"
   }
 }
