--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
+    "connect-history-api-fallback": "^1.5.0",
     "express": "^4.16.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^3.0.4",
     "http-proxy-middleware": "^0.17.4",
     "opn": "^5.2.0",
     "webpack": "^4.0.1",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-hot-middleware": "^2.21.1",
     "webpack-merge": "^4.1.2"
   }
 }
